Fix inputs right margin on mobile

--- a/conjugation/drill.css
+++ b/conjugation/drill.css
@@ -192,7 +192,11 @@ body, input {
 }
 
 input#numQuestions {
-  width: 60px;
+  width: 100%;
+}
+
+select#questionFocus {
+  width: 100%;
 }
 
 div.options ul {
